# yumi

yumi_description/: CMakeLists.txt
yumi_description/urdf/: yumi.srdf.xacro
